# blue-glow

./: .gitignore  .travis.yml  Backend.cc  Backend.hpp  BlueGlow.cc  BlueGlow.desktop  BlueGlow.hpp  CMakeLists.txt  GithubAPI.cc  GithubAPI.hpp  LICENSE  README.md  SettingsManager.cc  SettingsManager.hpp  artwork.txt  atribute.htm  blue-glow.pro  main.cc  mainwindow.ui  updatedeployqt.json
.github/workflows/: deploy.yml
artwork-license/: README.md
qml/: main.qml  qml.qrc
qml/Components/: AboutPage.qml  AuthPage.qml  ErrorDialog.qml  MainMenu.qml  SettingsPage.qml
resources/: MIT.md  README.md  resources.qrc
